fixed task overflow issues

--- a/client/front_end/src/styles/Header.css
+++ b/client/front_end/src/styles/Header.css
@@ -55,7 +55,7 @@ nav img {
 
 ::placeholder {
   color: #f4f4f4;
-  opacity: 0.5;
+  opacity: 1;
 }
 
 .search {
