--- a/client/front_end/src/styles/Sidebar.css
+++ b/client/front_end/src/styles/Sidebar.css
@@ -25,7 +25,7 @@ body {
   color: #fff;
   top: 0;
   left: 0;
-  height: 100vh;
+  /*height: 100vh;*/
   width: 284px;
   padding: 1rem;
 }
