--- a/client/front_end/src/styles/Task.css
+++ b/client/front_end/src/styles/Task.css
@@ -27,6 +27,8 @@
 .notstarted{
   background-color: #DB4437;
   color: #DB4437;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
 }
 
 .todo {
@@ -36,16 +38,22 @@
 
 .completed{
   background-color: #0F9D58;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
   color: #0F9D58;
 }
 
 .reject{
   background-color: #DB4437;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
   color: white;
 }
 
 .accept{
   background-color: #0F9D58;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
   color: white;
 }
 
